# Smart-DevOps-Assistant

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Contributing.md  Dockerfile  Makefile  README.md  auto_fix.sh  docker-compose.yaml  pyproject.toml  quality_check.sh
.github/workflows/: ci.yaml
app/: main.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/domain/: __init__.py  entities.py  entitles.py  repositories.py  value_objects.py
app/events/: __init__.py  base.py  event_bus.py  event_store.py  handlers.py  incident_events.py  log_events.py  middleware.py  ml_events.py
docker/: Dockerfile  Dockerfile.dev  Dockerfile.prod
docker/prometheus/: prometheus.yaml
tests/: __init__.py  conftest.py  test_main.py
tests/integration/: test_basic_integration.py
tests/ml/: __init__.py  test_ml_basic.py  test_ml_benchmarks.py
tests/unit/: test_domain.py  test_entities.py  test_event_coverage.py  test_event_infrastructure.py  test_events.py  test_exceptions.py  test_health.py  test_log_events.py  test_logging.py  test_logging_coverage.py  test_models.py  test_repositories.py  test_simple_coverage.py  test_value_object.py
tests/unit/domain/: test_entities_comprehensive.py
